# sync_HWFFT

./: CMakeLists.txt  MANIFEST.md
cmake/Modules/: sync_fftConfig.cmake
docs/: README.sync_fft
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
grc/: CMakeLists.txt  sync_fft_hwfft.xml
include/sync_fft/: CMakeLists.txt  api.h  hwfft.h
lib/: CMakeLists.txt  hwfft_impl.cc  hwfft_impl.h  qa_sync_fft.cc  qa_sync_fft.h  test_sync_fft.cc
python/: CMakeLists.txt  __init__.py
swig/: CMakeLists.txt  sync_fft_swig.i
